# bananabit-cms

./: .env.example  .gitignore  CMS_README.md  CSS_FIX_DOCUMENTATION.md  Cargo.toml  DOCKER_ASSET_TEST_RESULTS.md  DOCKER_README.md  Dockerfile  EMAIL_TROUBLESHOOTING.md  README.md  docker-compose.prod.yml  docker-compose.yml  fly.toml  quick-asset-test.sh  setup-production.sh  start.sh  test-docker-assets.sh  test-email.sh  verify-asset-copy.sh  verify-css-deployment.sh
api/: Cargo.toml
api/src/: database.rs  email.rs  lib.rs
ba-server/: Cargo.toml
ba-server/assets/: main.css
ba-server/assets/blog/: 0.md
ba-server/src/: main.rs
client/: Cargo.toml
client/src/: api.rs  lib.rs  time.rs  types.rs
desktop/: Cargo.toml
desktop/src/views/: blog.rs
mobile/: Cargo.toml
mobile/src/views/: blog.rs
ui/: Cargo.toml
ui/assets/: blog.css
ui/assets/blog/: 0.md  none.md
ui/assets/styling/: markdown.css  syntax.css
ui/src/: database.rs  lib.rs  markdown.rs  navbar.rs
ui/src/extensions/: analytics.rs  auth.rs  comments.rs  i18n.rs  media.rs  media_old.rs  mod.rs  pages.rs  posts.rs  scheduling.rs  seo.rs  themes.rs  themes_old.rs
ui/src/views/: blog.rs  home.rs
web/: Cargo.toml  Dioxus.toml
web/assets/: blog.css  components.css
web/assets/blog/: none.md
web/src/: main.rs
web/src/views/: blog.rs
