[workspace]
members = [
    "api",
    "ba-server",
    "client",
    "desktop",
    "mobile",
    "ui",
    "web",
]
resolver = "2"

[workspace.dependencies]
dioxus = { version = "0.7.0-rc.0" }
getrandom = { version = "0.2", features = ["js"] }

# workspace
ui = { path = "ui" }
api = { path = "api" }
client = { path = "client" }
ba-server = { path = "ba-server"}