[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.23", features = ["json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
web-sys = "0.3"
reqwest = { version = "0.12.23", default-features = false, features = ["json"] }