[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"]  }
client = { workspace = true }
api = { workspace = true }
futures = "0.3.31"
gloo-net = "0.6.0"
pulldown-cmark = "0.9.3"
reqwest = "0.12.23"
serde = { version = "1.0", features = ["derive"] }
syntect = { version = "5.1.0", default-features = false, features = ["default-fancy"] }
