[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"]  }
client = { workspace = true }
api = { workspace = true }
futures = "0.3.31"
gloo-net = "0.6.0"
pulldown-cmark = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
syntect = { version = "5.1.0", default-features = false, features = ["default-fancy"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = "0.12.23"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["json"] }
