[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack","router"] }
ui = { workspace = true }
ba-server = { workspace = true , optional = true}
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.0", default-features = false }


[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "ba-server"]
